# gash_client

./: LICENSE  README.md  compose.yml  pyproject.toml
examples/: policy.yml
gash_client/: __about__.py  __init__.py  config.py
gash_client/core/: client.py
gash_client/core/permit/: dto.py
gash_client/core/resource/: dto.py
gash_client/core/scope/: dto.py
gash_client/core/user/: dto.py
tests/: conftest.py  test_main.py
